--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "lcov-parse": "1.0.x",
     "lodash": "4.17.x",
     "nconf": "0.8.x",
-    "request": "2.81.x"
+    "request": "2.81.x",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "ava": "0.22.x",
