--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ sudo: false
 language: node_js
 node_js: 6
 cache:
-  directories: node_modules
+  directories:
+    - node_modules
+    - ~/.npm
 script:
   - npm test
   - npm run lint -s
