--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ sudo: false
 language: node_js
 node_js: 6
 cache:
-  directories:
-    - node_modules
-    - ~/.npm
+  directories: node_modules
 script:
   - npm test
   - npm run lint -s
